# FinTrack

./: .env  Cargo.toml  README.md  Untitled-1  bitcoin.conf  canister_ids.json  dfx.json  package-lock.json  package.json  robust_test.sh  simple_test.sh  test_backend.sh  test_transactions.sh
.dfx/local/: canister_ids.json  network-id
.dfx/local/lsp/: uzt4z-lp777-77774-qaabq-cai.did
backend/: Cargo.toml  backend.did  lib.rs  models.rs  utils.rs
backend/service/: bitcoin.rs  budget.rs  currency.rs  goal.rs  mod.rs  notification.rs  transaction.rs  user.rs
bitcoin_data/regtest/chainstate/: 000005.ldb
frontend/: package.json
frontend/src/: AddTransaction.jsx  App.jsx  AuthContext.jsx  BtcWalletPage.jsx  Navbar.jsx  ReportFinancial.jsx  main.jsx  utils.jsx
frontend/src/components/: Accordion.jsx  AddTransaction.jsx  Alert.jsx  Avatar.jsx  Badge.jsx  BottomNav.jsx  Breadcrumb.jsx  Button.jsx  Card.jsx  ChartComponent.jsx  CurrencySelector.jsx  DashboardWidget.jsx  Divider.jsx  Dropdown.jsx  EnvironmentDebug.jsx  ErrorBoundary.jsx  Input.jsx  LoadingSpinner.jsx  Modal.jsx  NotificationBell.jsx  Pagination.jsx  Progress.jsx  QuickActions.jsx  Select.jsx  Sidebar.jsx  Skeleton.jsx  Switch.jsx  Table.jsx  Tabs.jsx  Tag.jsx  Timeline.jsx  Tooltip.jsx
frontend/src/contexts/: AuthContext.jsx
frontend/src/hooks/: useBackend.js
frontend/src/pages/: AIAdvisorPage.jsx  AnalyticsPage.jsx  BudgetPage.jsx  DashboardPage.jsx  GoalsPage.jsx  HelpPage.jsx  LoginPage.jsx  NotificationsPage.jsx  PortfolioPage.jsx  SettingsPage.jsx  TransactionsPage.jsx  WalletsPage.jsx
(+17 files in other folders)
