[package]
name = "backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]
path = "lib.rs"

[dependencies]
candid = "0.10.13"
ic-cdk = "0.18.5"
serde = "1.0"
serde_json = "1.0"
ic-stable-structures = "0.6"
ic-management-canister-types = "0.3.1"
hex = "0.4.3"
# ic-llm = "1.1.0" // COMMENTED OUT: LLM disabled for build compatibility
