[package]
name = "backend"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]
path = "lib.rs"

[dependencies]
candid = "0.10.13"
ic-cdk = "0.18.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
ic-stable-structures = "0.6"
hex = "0.4.3"
# chrono = { version = "0.4", default-features = false, features = ["serde"] }
